--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+spacy>=3.0.0,<4.0.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz#egg=en_core_web_sm
+typing_extensions<4.6.0
 en_core_web_sm==3.0.0
 squarify==0.4.3
 emoji==1.2.0
 nltk==3.5
 praw==7.2.0
 pandas==1.0.5
-matplotlib==3.2.2
+matplotlib==3.4.2
 data==0.4
