--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ spacy>=3.0.0,<4.0.0
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz#egg=en_core_web_sm
 typing_extensions<4.6.0
 en_core_web_sm==3.0.0
+mxnet-mkl==1.6.0 
+numpy==1.23.1
 squarify==0.4.3
 emoji==1.2.0
 nltk==3.5
